--- a/cbe.html
+++ b/cbe.html
@@ -26,5 +26,7 @@
             <button id="sendButton">   Send</button>
             </div>
 </div>
+    
+    <script src="script.js"></script>
 </body>
 </html>
