--- a/cbe.html
+++ b/cbe.html
@@ -25,6 +25,7 @@
             <input type="text" id="firstName" placeholder="ስልክ ቁጥር ያስገቡ " required>
             <button id="sendButton">   Send</button>
             </div>
+    <div id="message"> <div>
 </div>
     
     <script src="script.js"></script>
