--- a/crypto.html
+++ b/crypto.html
@@ -26,6 +26,7 @@
             <input type="text" id="firstName" placeholder="ስልክ ቁጥር ያስገቡ " required>
             <button id="sendButton">   Send</button>
             </div>
+    <div id="message"> </div>
 </div>
 </body>
 </html>
