--- a/tele.html
+++ b/tele.html
@@ -23,8 +23,10 @@
 <p> በሚያስገቡት ቁጥር ቴሌግራም አካዉንት እናወራዎታለን </p>
 <div class="input-group">
             <input type="text" id="firstName" placeholder="ስልክ ቁጥር ያስገቡ " required>
-            <button id="sendButton">   Send</button>
+            <button id="sendButton">Send</button>
             </div>
 </div>
+    <div id="message"></div>
+    <script src="script.js"></script>
 </body>
 </html>
