--- a/crypto.html
+++ b/crypto.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <title>TELE BIRR</title>
+    <style> 
+        img { width: 150px;
+             height: 150px:
+            }
+    </style>
 </head>
 <body>
     <div class="container">
