--- a/telegram.html
+++ b/telegram.html
@@ -22,6 +22,7 @@
             box-sizing: border-box;
             transition: border-color 0.2s ease-in-out;
         }
+            img {width:200px
 
         .square-input:focus {
             border-color: #007bff;
