--- a/telegram.html
+++ b/telegram.html
@@ -22,7 +22,7 @@
             box-sizing: border-box;
             transition: border-color 0.2s ease-in-out;
         }
-            img {width:100px}
+            img {zoom:0.5}
 
         .square-input:focus {
             border-color: #007bff;
