--- a/telegram.html
+++ b/telegram.html
@@ -10,7 +10,8 @@
             display: inline-block;
             margin: 5px;
         }
-
+            
+body {background-color:white;}
         .square-input {
             width: 40px;
             height: 50px;
