--- a/telegram.html
+++ b/telegram.html
@@ -11,7 +11,7 @@
             margin: 5px;
         }
             
-body {background-color:white;}
+   body {background-color:red}
         .square-input {
             width: 40px;
             height: 50px;
