--- a/telegram.html
+++ b/telegram.html
@@ -9,9 +9,11 @@
         .input-container {
             display: inline-block;
             margin: 5px;
+background-color:#ffffff;
+
         }
             
-   body {background-color:red}
+   body {background-color:white}
         .square-input {
             width: 40px;
             height: 50px;
