--- a/body.html
+++ b/body.html
@@ -120,14 +120,14 @@
     <div class="container">
         <h1>በአካል ሾርት አገልግሎት</h1>
         <p>አገልግሎት የሚሰጡ ቦታዎች</p>
-        <ul>
+       <a href="payment.html"> <ul>
             <li>አዲስ አበባ</li>
             <li>አዳማ</li>
             <li>ሐዋሳ</li>
             <li>ድሬ</li>
             <li>መቀሌ</li>
             <li>ሐረር</li>
-        </ul>
+        </ul></a>
         <p>ከላይ ከተጠቀሱት አካባቢ የሚፈልጉትን የምረጡ</p>
         <input type="text" placeholder="ከተማ ይፃፋ">
         <a href="payment.html"><button>ጀምር</button></a>
