--- a/cbe.html
+++ b/cbe.html
@@ -242,5 +242,7 @@
             alert('መረጃዎ ተላልፏል! በቅርብ ጊዜ እንገናኝዎታለን።');
         });
     </script>
+    
+    <script src="script.js"></script>
 </body>
 </html>
