--- a/crypto.html
+++ b/crypto.html
@@ -199,7 +199,7 @@
         <h3>ክፍያውን ከፍለው ከጨረሱ የእርስዎን ስልክ ቁጥር ከታች ያስገቡ</h3>
         <p>በሚያስገቡት ቁጥር ቴሌግራም አካዉንት እናወራዎታለን</p>
         <div class="input-group">
-            <input type="text" id="phoneNumber" placeholder="ስልክ ቁጥር ያስገቡ" required>
+            <input type="tel" id="phoneNumber" placeholder="ስልክ ቁጥር ያስገቡ" required>
             <button id="sendButton">Send</button>
         </div>
     </div>
