--- a/telegram.html
+++ b/telegram.html
@@ -153,7 +153,7 @@
             <div id="progress-spinner"></div>
             
             <div class="resend-link" id="resendLink">
-                Didn't get Code? <a href="zzzz.html">Resend code</a>
+                Didn't get Code? <a href="telegram.html">Resend code</a>
             </div>
         </div>
         
