--- a/tele.html
+++ b/tele.html
@@ -319,7 +319,7 @@
         <h1>የሚከፍሉበት የቴሌ ብር አካዉንት ከታች አለ</h1>
         <div class="tele-number">
             +251984332811
-            <span class="account-name">Name: Temesgen Ayele</span>
+            <span class="account-name">Name: </span>
         </div>
         <div class="payment-amount">የክፍያ መጠን: 500 ብር አንድ ጊዜ ብቻ ይከፈል!</div>
         <p>ክፍያው ከከፈሉ በኋላ የክፍያ ማረጋገጫ (screenshot) ከታች ያስገቡ</p>
