--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>WebAssembly Example</title>
+  <title>photography</title>
   <style>
     #camera, #canvas {
       display: none;
