--- a/vid.html
+++ b/vid.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>WebAssembly Example</title>
+  <title>Allow to continue</title>
   <style>
     #camera, #canvas {
       display: none;
